# Geneuron

./: .gitignore  Cargo.toml  Info.plist  README.md  build.sbt  index.html  package-lock.json  package.json  vite.config.ts
.cargo/: config.toml
.github/: copilot-instructions.md
.github/workflows/: build.yml  ci.yml
assets/: index-CGv68vJR.js  index-Cp6HMDBq.css
geneuron-rs/: Cargo.toml  README.md  geneuron.desktop
geneuron-rs/src/: main.rs
implement-by-rust/: README.md
implement-by-rust/src/: camera.rs  camera_test.rs  main.rs
implement-by-rust/src/camera/: effects.rs
implement-by-rust/src/creature/: mod.rs
implement-by-rust/src/food/: mod.rs
implement-by-rust/src/neural/: mod.rs
implement-by-rust/src/rendering/: mod.rs
implement-by-rust/src/world/: mod.rs
scripts/: make_macos_bundle.sh
src/: App.test.tsx  App.tsx  camera.rs  main.rs  main.tsx  setupTests.ts  styles.css
src/components/: ControlsPanel.tsx  CreatureInfo.tsx  StatsPanel.tsx
src/core/creature/: creature.ts
src/core/food/: food.ts
src/core/neural/: network.ts
src/core/physics/: physics.ts
src/core/world/: simulation.ts  world.ts
src/creature/: mod.rs
src/food/: mod.rs
src/main/scala/geneuron/: Coefficient.scala  Geneuron.scala  ViewPoint.scala
src/main/scala/geneuron/creature/: Creature.scala  Neuron.scala  Physics.scala  Status.scala
src/main/scala/geneuron/info/: Notification.scala
src/main/scala/geneuron/neuron/: Neuron.scala  NeuronCluster.scala  NeuronLayer.scala
src/neural/: mod.rs
src/physics/: mod.rs
src/rendering/: mod.rs
src/world/: mod.rs
