[package]
name = "geneuron"
version = "0.1.0"
edition = "2021"
authors = ["tomingtoming"]
description = "Neural Evolution Simulation"
readme = "README.md"
repository = "https://github.com/tomingtoming/geneuron"
license = "MIT"

[dependencies]
macroquad = "0.4"     # Replace ggez with macroquad
rand = "0.8"          # Random number generation
nalgebra = "0.32"     # Matrix calculations

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "Document", "Element"] }
console_error_panic_hook = "0.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true  # Automatically strip symbols from the binary

[package.metadata.bundle]
name = "Geneuron"
identifier = "app.toming.geneuron"
version = "0.1.0"
copyright = "Copyright (c) 2025 tomingtoming"
category = "Science"
short_description = "Neural Evolution Simulation"
