[package]
name = "geneuron"
version = "0.1.0"
edition = "2021"
authors = ["tomingtoming"]
description = "Neural Evolution Simulation"
readme = "README.md"
repository = "https://github.com/tomingtoming/geneuron"
license = "MIT"

[dependencies]
ggez = "0.9"           # 2Dゲームフレームワーク
rand = "0.8"          # 乱数生成
nalgebra = "0.32"     # 行列計算
rayon = "1.7"         # 並列処理
serde = { version = "1.0", features = ["derive"] }  # シリアライゼーション
serde_json = "1.0"    # JSON処理

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true  # Automatically strip symbols from the binary

[package.metadata.bundle]
name = "Geneuron"
identifier = "app.toming.geneuron"
version = "0.1.0"
copyright = "Copyright (c) 2025 tomingtoming"
category = "Science"
short_description = "Neural Evolution Simulation"
